# GNCE

./: GNCE_batched.py  Readme.md  appendix.md  cardinality_estimation.py  embeddings_generator.py  models.py  pyproject.toml  requirements.txt  run_experiments.py  tutorial.ipynb  utils.py
GCARE/: build_statistics.py  run_estimation.py  transform_query.py
LMKG/: README.md
LMKG/lmkg-u/: README.md  common.py  compressor.py  datasets.py  environment.yml  estimators.py  eval_model.py  made.py  train_model.py
LMKG/lmkg-u/datasets/: info.txt
LMKG/lmkg-u/queries/: eval_swdf_chain_2_0.txt  eval_swdf_star_2_0.txt
LMKG/lmkgs/: README.md  complex_reader.py  data_processor_release.py  environment.yml  estimates_file.py  lmkgs.py  query_graph.py  store_statistics.py  testground.ipynb
LSS/: lss.py  query_saver.py  server_transfer.py
notebooks/data_handling/: LoadCSVDataset.ipynb  RDF_to_Gcare.ipynb  WIKIDATA_CONVERTER.ipynb
notebooks/data_handling/.ipynb_checkpoints/: RDF_to_Gcare-checkpoint.ipynb  WIKIDATA_CONVERTER-checkpoint.ipynb
notebooks/inductive_setting_data_preparation/: Create Disjoint QuerySet.ipynb
notebooks/plots/: Evaluation_and_training_time_plots.ipynb  QueryExecutionTimes.ipynb  Statistics and Plotting.ipynb
notebooks/plots/.ipynb_checkpoints/: QueryExecutionTimes-checkpoint.ipynb
pyrdf2vec/: rdf2vec.py
pyrdf2vec/embedders/: word2vec.py
pyrdf2vec/walkers/: walker.py
utils/: ProNE_Label_Saving.py  query_duplicate_removal.py
